--- a/tasks.org
+++ b/tasks.org
@@ -4,12 +4,12 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-03-13 Mon 18:09]
+#+CAPTION: Clock summary at [2017-03-13 周一 21:02]
 | Headline                                   | Time       |         |
 |--------------------------------------------+------------+---------|
-| *Total time*                               | *3d 19:57* |         |
+| *Total time*                               | *3d 20:58* |         |
 |--------------------------------------------+------------+---------|
-| BOOK                                       | 3d 19:57   |         |
+| BOOK                                       | 3d 20:58   |         |
 | \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
 | \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
 | \_  TODO [#A] 数据库系统概念[16%]          |            |    4:49 |
@@ -36,6 +36,7 @@
 | \_  TODO [#A] Linux 多线程服务端编程[18%]  |            |    0:56 |
 | \_  TODO [#A] TCP/IP 详解[0%]p.6           |            |    1:01 |
 | \_  TODO [#A] Unix Network Programming[6%] |            |    5:38 |
+| \_  TODO [#A] 图解 TCP/IP[10%]             |            |    1:01 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#A] CLRS
@@ -531,6 +532,8 @@
    - [ ] 运行时程序管理
    - [ ] 代码改进
    :LOGBOOK:
+   CLOCK: [2017-03-21 周二 16:14]--[2017-03-21 周二 16:20] =>  0:06
+   CLOCK: [2017-03-21 周二 13:39]--[2017-03-21 周二 14:03] =>  0:24
    :END:
 ** TODO [#B] 编程原本[8%]
    - [X] 基础
@@ -557,6 +560,11 @@
    - [ ] 字符串
    - [ ] 背景
    :LOGBOOK:
+   CLOCK: [2017-03-20 周一 22:51]--[2017-03-20 周一 23:16] =>  0:25
+   CLOCK: [2017-03-20 周一 20:32]--[2017-03-20 周一 21:08] =>  0:36
+   CLOCK: [2017-03-18 周六 21:58]--[2017-03-18 周六 22:52] =>  0:54
+   CLOCK: [2017-03-17 周五 17:02]--[2017-03-17 周五 18:20] =>  1:18
+   CLOCK: [2017-03-15 周三 20:23]--[2017-03-15 周三 20:26] =>  0:03
    CLOCK: [2017-02-24 周五 11:41]--[2017-02-24 周五 12:32] =>  0:51
    CLOCK: [2017-02-23 周四 23:23]--[2017-02-24 周五 00:14] =>  0:51
    :END:
@@ -719,6 +727,38 @@
    CLOCK: [2017-03-12 Sun 13:10]--[2017-03-12 Sun 13:40] =>  0:30
    CLOCK: [2017-03-11 Sat 17:24]--[2017-03-11 Sat 18:09] =>  0:45
    CLOCK: [2017-03-11 Sat 16:13]--[2017-03-11 Sat 17:08] =>  0:55
+   :END:
+** TODO [#A] 图解 TCP/IP[10%]
+   - [X] 网络基础知识
+   - [ ] TCP/IP 基础知识
+   - [ ] 数据链路
+   - [ ] IP 协议
+   - [ ] IP 协议相关技术
+   - [ ] TCP 与 UDP
+   - [ ] 路由协议
+   - [ ] 应用协议
+   - [ ] 网络安全
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-03-13 周一 19:50]--[2017-03-13 周一 20:11] =>  0:21
+   CLOCK: [2017-03-13 周一 19:05]--[2017-03-13 周一 19:45] =>  0:40
+   :END:
+** TODO [#A] Java 核心技术卷一[66%]
+   - [X] Introduction
+   - [X] The Java Programming Environment
+   - [X] Fundamental Programming Structure in Java
+   - [X] Objects and Class
+   - [X] Inheritance
+   - [X] Interface Lambda Expressions and Inner Classes
+   - [ ] Exceptions Assertion,and Logging
+   - [ ] Generic Programming
+   - [ ] Clloctions
+   :LOGBOOK:
+   CLOCK: [2017-03-17 周五 16:14]--[2017-03-17 周五 16:33] =>  0:19
+   CLOCK: [2017-03-17 周五 15:48]--[2017-03-17 周五 16:06] =>  0:18
+   CLOCK: [2017-03-16 周四 20:47]--[2017-03-16 周四 21:05] =>  0:18
+   CLOCK: [2017-03-16 周四 19:33]--[2017-03-16 周四 20:04] =>  0:31
+   CLOCK: [2017-03-15 周三 20:30]--[2017-03-15 周三 21:09] =>  0:39
    :END:
 * Homework
 * Things
