--- a/tasks.org
+++ b/tasks.org
@@ -4,39 +4,41 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-03-13 周一 21:02]
-| Headline                                   | Time       |         |
-|--------------------------------------------+------------+---------|
-| *Total time*                               | *3d 20:58* |         |
-|--------------------------------------------+------------+---------|
-| BOOK                                       | 3d 20:58   |         |
-| \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
-| \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
-| \_  TODO [#A] 数据库系统概念[16%]          |            |    4:49 |
-| \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |    1:03 |
-| \_  TODO [#B] Mathematics of 3D Game...    |            |    0:54 |
-| \_  TODO [#B] Game Coding Complete[50%]    |            | 1d 7:57 |
-| \_  TODO [#B] GEA[0%]                      |            |    0:27 |
-| \_  TODO [#C] 程序员的自我修养[15%]        |            |    1:06 |
-| \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
-| \_  TODO [#C] Windows 程序设计             |            |    1:22 |
-| \_  TODO [#B] 面向对象的游戏开发[27%]      |            |    2:37 |
-| \_  TODO [#A] C++语言的设计及演化          |            |    2:01 |
-| \_  TODO [#A] 深度探索 C++对象模型[14%]    |            |    1:28 |
-| \_  TODO [#A] C++标准库[21%]               |            |    5:33 |
-| \_  TODO [#B] 代码大全 2[5%]               |            |    0:36 |
-| \_  WAIT [#C] C++模板元编程[58%]           |            |    9:13 |
-| \_  TODO [#B] 面向对象分析与设计[0%]       |            |    0:45 |
-| \_  TODO [#B] 编程原本[8%]                 |            |    1:00 |
-| \_  TODO [#A] 算法[0%]                     |            |    1:42 |
-| \_  TODO [#A] 泛型编程与 STL[0%]           |            |    0:27 |
-| \_  TODO [#A] 第一行代码[6%]               |            |    1:08 |
-| \_  TODO [#B] STL 源码剖析[11%]            |            |    2:39 |
-| \_  TODO [#A] Effective C++[33%]           |            |    2:48 |
-| \_  TODO [#A] Linux 多线程服务端编程[18%]  |            |    0:56 |
-| \_  TODO [#A] TCP/IP 详解[0%]p.6           |            |    1:01 |
-| \_  TODO [#A] Unix Network Programming[6%] |            |    5:38 |
-| \_  TODO [#A] 图解 TCP/IP[10%]             |            |    1:01 |
+#+CAPTION: Clock summary at [2017-04-09 Sun 14:33]
+| Headline                                   | Time      |         |
+|--------------------------------------------+-----------+---------|
+| *Total time*                               | *4d 9:39* |         |
+|--------------------------------------------+-----------+---------|
+| BOOK                                       | 4d 9:39   |         |
+| \_  TODO [#A] OpenGL Programming Guide[8%] |           |    2:56 |
+| \_  TODO [#A] Unity 权威讲解[33%]          |           |    6:52 |
+| \_  TODO [#A] 数据库系统概念[16%]          |           |    4:49 |
+| \_  TODO [#B] 游戏编程算法与技巧[7%]       |           |    1:03 |
+| \_  TODO [#B] Mathematics of 3D Game...    |           |    0:54 |
+| \_  TODO [#B] Game Coding Complete[50%]    |           | 1d 7:57 |
+| \_  TODO [#B] GEA[0%]                      |           |    0:27 |
+| \_  TODO [#C] 程序员的自我修养[15%]        |           |    1:06 |
+| \_  TODO [#C] Game Programming Patterns    |           |    0:59 |
+| \_  TODO [#C] Windows 程序设计             |           |    1:22 |
+| \_  TODO [#B] 面向对象的游戏开发[27%]      |           |    2:37 |
+| \_  TODO [#A] C++语言的设计及演化          |           |    2:01 |
+| \_  TODO [#A] 深度探索 C++对象模型[14%]    |           |    1:28 |
+| \_  TODO [#A] C++标准库[21%]               |           |    5:33 |
+| \_  TODO [#B] 代码大全 2[5%]               |           |    0:36 |
+| \_  WAIT [#C] C++模板元编程[58%]           |           |    9:13 |
+| \_  TODO [#B] 面向对象分析与设计[0%]       |           |    0:45 |
+| \_  TODO [#B] 程序设计语言--实践之路[12%]  |           |    5:03 |
+| \_  TODO [#B] 编程原本[8%]                 |           |    1:00 |
+| \_  TODO [#A] 算法[0%]                     |           |    4:58 |
+| \_  TODO [#A] 泛型编程与 STL[0%]           |           |    0:27 |
+| \_  TODO [#A] 第一行代码[6%]               |           |    1:08 |
+| \_  TODO [#B] STL 源码剖析[11%]            |           |    2:39 |
+| \_  TODO [#A] Effective C++[33%]           |           |    2:48 |
+| \_  TODO [#A] Linux 多线程服务端编程[18%]  |           |    0:56 |
+| \_  TODO [#A] TCP/IP 详解[0%]p.6           |           |    1:01 |
+| \_  TODO [#A] Unix Network Programming[9%] |           |    7:55 |
+| \_  TODO [#A] 图解 TCP/IP[10%]             |           |    1:01 |
+| \_  TODO [#A] Java 核心技术卷一[66%]       |           |    2:05 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#A] CLRS
@@ -514,9 +516,9 @@
    :LOGBOOK:
    :END:
 ** TODO [#C] 垃圾回收算法手册[%]
-** TODO [#B] 程序设计语言--实践之路[%]
-   - [ ] 引言
-   - [ ] 程序设计语言的语法
+** TODO [#B] 程序设计语言--实践之路[12%]
+   - [X] 引言
+   - [X] 程序设计语言的语法
    - [ ] 名字,作用域和约束
    - [ ] 语义分析
    - [ ] 目标机体系结构
@@ -532,6 +534,17 @@
    - [ ] 运行时程序管理
    - [ ] 代码改进
    :LOGBOOK:
+   CLOCK: [2017-04-10 Mon 16:36]--[2017-04-10 Mon 16:45] =>  0:09
+   CLOCK: [2017-04-09 Sun 14:33]--[2017-04-09 Sun 14:47] =>  0:14
+   CLOCK: [2017-04-08 Sat 17:11]--[2017-04-08 Sat 17:41] =>  0:30
+   CLOCK: [2017-04-08 Sat 17:10]--[2017-04-08 Sat 17:51] =>  0:41
+   CLOCK: [2017-03-24 Fri 17:23]--[2017-03-24 Fri 17:38] =>  0:15
+   CLOCK: [2017-03-23 Thu 17:54]--[2017-03-23 Thu 18:23] =>  0:29
+   CLOCK: [2017-03-23 Thu 16:23]--[2017-03-23 Thu 17:04] =>  0:41
+   CLOCK: [2017-03-21 Tue 21:33]--[2017-03-21 Tue 21:54] =>  0:21
+   CLOCK: [2017-03-21 Tue 20:29]--[2017-03-21 Tue 20:59] =>  0:30
+   CLOCK: [2017-03-21 Tue 17:41]--[2017-03-21 Tue 18:17] =>  0:36
+   CLOCK: [2017-03-21 Tue 17:02]--[2017-03-21 Tue 17:32] =>  0:30
    CLOCK: [2017-03-21 周二 16:14]--[2017-03-21 周二 16:20] =>  0:06
    CLOCK: [2017-03-21 周二 13:39]--[2017-03-21 周二 14:03] =>  0:24
    :END:
@@ -684,10 +697,10 @@
    CLOCK: [2017-03-11 周六 14:34]--[2017-03-11 周六 15:10] =>  0:36
    CLOCK: [2017-03-11 周六 12:45]--[2017-03-11 周六 13:10] =>  0:25
    :END:
-** TODO [#A] Unix Network Programming[6%]
+** TODO [#A] Unix Network Programming[9%]
    - [X] Introdxuction
    - [X] TCP UDP SCTP
-   - [ ] Sockets Introduction
+   - [X] Sockets Introduction
    - [ ] Elementary TCP Sockets
    - [ ] TCP Client/Server Example
    - [ ] I/O Multiplexing: select and poll
@@ -718,6 +731,11 @@
    - [ ] STREAMS
    - [ ] Appendix
    :LOGBOOK:
+   CLOCK: [2017-03-23 Thu 00:35]--[2017-03-23 Thu 00:48] =>  0:13
+   CLOCK: [2017-03-22 Wed 17:33]--[2017-03-22 Wed 18:07] =>  0:34
+   CLOCK: [2017-03-22 Wed 16:51]--[2017-03-22 Wed 17:28] =>  0:37
+   CLOCK: [2017-03-22 Wed 13:13]--[2017-03-22 Wed 13:44] =>  0:31
+   CLOCK: [2017-03-21 Tue 22:03]--[2017-03-21 Tue 22:25] =>  0:22
    CLOCK: [2017-03-13 Mon 17:48]--[2017-03-13 Mon 18:09] =>  0:21
    CLOCK: [2017-03-13 Mon 16:17]--[2017-03-13 Mon 17:12] =>  0:55
    CLOCK: [2017-03-12 Sun 22:13]--[2017-03-12 Sun 22:50] =>  0:37
