--- a/tasks.org
+++ b/tasks.org
@@ -377,6 +377,8 @@
    - [ ] 并发
    - [ ] 分配器
    :LOGBOOK:
+   CLOCK: [2017-04-15 周六 16:32]--[2017-04-15 周六 16:57] =>  0:25
+   CLOCK: [2017-04-11 周二 09:32]--[2017-04-11 周二 09:49] =>  0:17
    CLOCK: [2017-03-08 周三 11:38]--[2017-03-08 周三 12:06] =>  0:28
    CLOCK: [2017-02-23 周四 19:39]--[2017-02-23 周四 20:11] =>  0:32
    CLOCK: [2017-02-23 周四 17:26]--[2017-02-23 周四 19:25] =>  1:59
