--- a/tasks.org
+++ b/tasks.org
@@ -4,41 +4,45 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-04-09 Sun 14:33]
-| Headline                                   | Time      |         |
-|--------------------------------------------+-----------+---------|
-| *Total time*                               | *4d 9:39* |         |
-|--------------------------------------------+-----------+---------|
-| BOOK                                       | 4d 9:39   |         |
-| \_  TODO [#A] OpenGL Programming Guide[8%] |           |    2:56 |
-| \_  TODO [#A] Unity 权威讲解[33%]          |           |    6:52 |
-| \_  TODO [#A] 数据库系统概念[16%]          |           |    4:49 |
-| \_  TODO [#B] 游戏编程算法与技巧[7%]       |           |    1:03 |
-| \_  TODO [#B] Mathematics of 3D Game...    |           |    0:54 |
-| \_  TODO [#B] Game Coding Complete[50%]    |           | 1d 7:57 |
-| \_  TODO [#B] GEA[0%]                      |           |    0:27 |
-| \_  TODO [#C] 程序员的自我修养[15%]        |           |    1:06 |
-| \_  TODO [#C] Game Programming Patterns    |           |    0:59 |
-| \_  TODO [#C] Windows 程序设计             |           |    1:22 |
-| \_  TODO [#B] 面向对象的游戏开发[27%]      |           |    2:37 |
-| \_  TODO [#A] C++语言的设计及演化          |           |    2:01 |
-| \_  TODO [#A] 深度探索 C++对象模型[14%]    |           |    1:28 |
-| \_  TODO [#A] C++标准库[21%]               |           |    5:33 |
-| \_  TODO [#B] 代码大全 2[5%]               |           |    0:36 |
-| \_  WAIT [#C] C++模板元编程[58%]           |           |    9:13 |
-| \_  TODO [#B] 面向对象分析与设计[0%]       |           |    0:45 |
-| \_  TODO [#B] 程序设计语言--实践之路[12%]  |           |    5:03 |
-| \_  TODO [#B] 编程原本[8%]                 |           |    1:00 |
-| \_  TODO [#A] 算法[0%]                     |           |    4:58 |
-| \_  TODO [#A] 泛型编程与 STL[0%]           |           |    0:27 |
-| \_  TODO [#A] 第一行代码[6%]               |           |    1:08 |
-| \_  TODO [#B] STL 源码剖析[11%]            |           |    2:39 |
-| \_  TODO [#A] Effective C++[33%]           |           |    2:48 |
-| \_  TODO [#A] Linux 多线程服务端编程[18%]  |           |    0:56 |
-| \_  TODO [#A] TCP/IP 详解[0%]p.6           |           |    1:01 |
-| \_  TODO [#A] Unix Network Programming[9%] |           |    7:55 |
-| \_  TODO [#A] 图解 TCP/IP[10%]             |           |    1:01 |
-| \_  TODO [#A] Java 核心技术卷一[66%]       |           |    2:05 |
+#+CAPTION: Clock summary at [2017-04-24 周一 20:26]
+| Headline                                   | Time       |         |
+|--------------------------------------------+------------+---------|
+| *Total time*                               | *4d 19:20* |         |
+|--------------------------------------------+------------+---------|
+| BOOK                                       | 4d 19:20   |         |
+| \_  TODO [#A] OpenGL Programming Guide[8%] |            |    2:56 |
+| \_  TODO [#A] Unity 权威讲解[33%]          |            |    6:52 |
+| \_  TODO [#A] 数据库系统概念[16%]          |            |    4:49 |
+| \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |    1:03 |
+| \_  TODO [#B] Mathematics of 3D Game...    |            |    0:54 |
+| \_  TODO [#B] Game Coding Complete[50%]    |            | 1d 7:57 |
+| \_  TODO [#B] GEA[0%]                      |            |    0:27 |
+| \_  TODO [#C] 程序员的自我修养[15%]        |            |    1:06 |
+| \_  TODO [#C] Game Programming Patterns    |            |    0:59 |
+| \_  TODO [#C] Windows 程序设计             |            |    1:22 |
+| \_  TODO [#B] 面向对象的游戏开发[27%]      |            |    2:37 |
+| \_  TODO [#A] C++语言的设计及演化          |            |    2:01 |
+| \_  TODO [#A] 深度探索 C++对象模型[14%]    |            |    1:28 |
+| \_  TODO [#A] C++标准库[21%]               |            |    9:42 |
+| \_  TODO [#B] 代码大全 2[5%]               |            |    0:36 |
+| \_  WAIT [#C] C++模板元编程[58%]           |            |    9:13 |
+| \_  TODO [#B] 面向对象分析与设计[0%]       |            |    0:45 |
+| \_  TODO [#B] 程序设计语言--实践之路[12%]  |            |    5:26 |
+| \_  TODO [#B] 编程原本[8%]                 |            |    1:00 |
+| \_  TODO [#A] 算法[0%]                     |            |    4:58 |
+| \_  TODO [#A] 泛型编程与 STL[0%]           |            |    0:27 |
+| \_  TODO [#A] 第一行代码[6%]               |            |    1:08 |
+| \_  TODO [#B] STL 源码剖析[11%]            |            |    2:39 |
+| \_  TODO [#A] Effective C++[33%]           |            |    2:48 |
+| \_  TODO [#A] Linux 多线程服务端编程[18%]  |            |    1:23 |
+| \_  TODO [#A] TCP/IP 详解[0%]p.6           |            |    1:01 |
+| \_  TODO [#A] Unix Network Programming[9%] |            |    7:55 |
+| \_  TODO [#A] 图解 TCP/IP[10%]             |            |    1:01 |
+| \_  TODO [#A] Java 核心技术卷一[66%]       |            |    2:05 |
+| \_  TODO [#A] C++编程规范[16%]             |            |    1:09 |
+| \_  TODO [#A] Exceptional C++[12%]         |            |    2:11 |
+| \_  TODO [#A] C++沉思录[0%]                |            |    1:18 |
+| \_  TODO [#B] The C++ Programming...       |            |    0:04 |
 #+END:
 * BOOK                                                               :@book:
 ** TODO [#A] CLRS
@@ -377,6 +381,13 @@
    - [ ] 并发
    - [ ] 分配器
    :LOGBOOK:
+   CLOCK: [2017-04-19 周三 12:23]--[2017-04-19 周三 12:53] =>  0:30
+   CLOCK: [2017-04-19 周三 11:31]--[2017-04-19 周三 12:00] =>  0:29
+   CLOCK: [2017-04-19 周三 10:48]--[2017-04-19 周三 11:26] =>  0:38
+   CLOCK: [2017-04-18 周二 21:57]--[2017-04-18 周二 22:13] =>  0:16
+   CLOCK: [2017-04-18 周二 21:10]--[2017-04-18 周二 21:41] =>  0:31
+   CLOCK: [2017-04-18 周二 14:55]--[2017-04-18 周二 15:39] =>  0:44
+   CLOCK: [2017-04-17 周一 19:51]--[2017-04-17 周一 20:10] =>  0:19
    CLOCK: [2017-04-15 周六 16:32]--[2017-04-15 周六 16:57] =>  0:25
    CLOCK: [2017-04-11 周二 09:32]--[2017-04-11 周二 09:49] =>  0:17
    CLOCK: [2017-03-08 周三 11:38]--[2017-03-08 周三 12:06] =>  0:28
@@ -780,6 +791,61 @@
    CLOCK: [2017-03-16 周四 20:47]--[2017-03-16 周四 21:05] =>  0:18
    CLOCK: [2017-03-16 周四 19:33]--[2017-03-16 周四 20:04] =>  0:31
    CLOCK: [2017-03-15 周三 20:30]--[2017-03-15 周三 21:09] =>  0:39
+   :END:
+** TODO [#A] C++编程规范[16%]
+   - [X] 组织和策略问题
+   - [X] 设计风格
+   - [ ] 编程风格
+   - [ ] 函数与操作符
+   - [ ] 类的设计与继承
+   - [ ] 构造，析构与复制
+   - [ ] 名字空间与模块
+   - [ ] 模版与泛型
+   - [ ] 错误处理与异常
+   - [ ] STL：容器
+   - [ ] STL：算法
+   - [ ] 类型安全
+   :LOGBOOK:
+   CLOCK: [2017-04-19 周三 16:45]--[2017-04-19 周三 17:04] =>  0:19
+   CLOCK: [2017-04-19 周三 14:43]--[2017-04-19 周三 15:33] =>  0:50
+   :END:
+** TODO [#A] Exceptional C++[25%]
+   - [X] 泛型程序设计与 C++标准库
+   - [X] 异常安全性相关的问题与技术
+   - [ ] 类的设计与继承
+   - [ ] 编译器防火墙和 pimpl
+   - [ ] 名字查找，名字空间和接口规则
+   - [ ] 内存管理
+   - [ ] 误区，陷阱以及错误的惯用法
+   - [ ] 其他主题
+   :LOGBOOK:
+   CLOCK: [2017-04-25 周二 10:10]--[2017-04-25 周二 10:43] =>  0:33
+   CLOCK: [2017-04-25 周二 08:00]--[2017-04-25 周二 08:45] =>  0:45
+   CLOCK: [2017-04-24 周一 09:39]--[2017-04-24 周一 11:01] =>  1:22
+   CLOCK: [2017-04-23 周日 21:23]--[2017-04-23 周日 21:52] =>  0:29
+   CLOCK: [2017-04-23 周日 20:50]--[2017-04-23 周日 21:10] =>  0:20
+   :END:
+** TODO [#A] C++沉思录[28%]
+   - [X] 序幕
+   - [X] 动机
+   - [ ] 类和继承
+   - [ ] 模板
+   - [ ] 库
+   - [ ] 技术
+   - [ ] 总结
+   :LOGBOOK:
+   CLOCK: [2017-04-24 周一 20:27]--[2017-04-24 周一 20:55] =>  0:28
+   CLOCK: [2017-04-24 周一 16:25]--[2017-04-24 周一 16:55] =>  0:30
+   CLOCK: [2017-04-24 周一 12:54]--[2017-04-24 周一 13:31] =>  0:37
+   CLOCK: [2017-04-24 周一 11:03]--[2017-04-24 周一 11:14] =>  0:11
+   :END:
+** TODO [#B] The C++ Programming Language[0%]
+   - [ ] Introductory Material
+   - [ ] Basic Facilities
+   - [ ] Abstraction Mechanisms
+   - [ ] The Standard Library
+   :LOGBOOK:
+   CLOCK: [2017-04-24 周一 20:19]--[2017-04-24 周一 20:23] =>  0:04
    :END:
 * Homework
 * Things
