--- a/tasks.org
+++ b/tasks.org
@@ -615,9 +615,9 @@
    :LOGBOOK:
    CLOCK: [2017-02-25 周六 16:27]--[2017-02-25 周六 16:54] =>  0:27
    :END:
-** TODO [#A] 第一行代码[6%]
+** TODO [#A] 第一行代码[13%]3.6
    - [X] 开始启程
-   - [ ] 探究活动
+   - [X] 探究活动
    - [ ] UI 开发
    - [ ] 探究碎片
    - [ ] 广播机制
@@ -632,6 +632,14 @@
    - [ ] 开发酷欧天气
    - [ ] 最后一步--将应用发布到 360 应用商店
    :LOGBOOK:
+   CLOCK: [2017-05-07 周日 20:41]--[2017-05-07 周日 21:34] =>  0:53
+   CLOCK: [2017-05-07 周日 17:57]--[2017-05-07 周日 18:26] =>  0:29
+   CLOCK: [2017-05-07 周日 17:14]--[2017-05-07 周日 17:44] =>  0:30
+   CLOCK: [2017-05-07 周日 12:40]--[2017-05-07 周日 13:04] =>  0:24
+   CLOCK: [2017-05-06 周六 15:25]--[2017-05-06 周六 15:41] =>  0:16
+   CLOCK: [2017-05-06 周六 11:37]--[2017-05-06 周六 11:49] =>  0:12
+   CLOCK: [2017-05-03 周三 11:45]--[2017-05-03 周三 12:04] =>  0:19
+   CLOCK: [2017-05-03 周三 10:49]--[2017-05-03 周三 11:16] =>  0:27
    CLOCK: [2017-02-26 周日 00:45]--[2017-02-26 周日 01:34] =>  0:49
    CLOCK: [2017-02-25 周六 23:25]--[2017-02-25 周六 23:44] =>  0:19
    :END:
@@ -903,6 +911,37 @@
    - [ ] ACE asyn
    :LOGBOOK:
    CLOCK: [2017-04-28 Fri 13:45]--[2017-04-28 Fri 13:58] =>  0:13
+   :END:
+** TODO [#A] 大规模 C++ 程序设计[8%]
+   - [X] 引言
+   - [ ] 预备知识
+   - [ ] 基本规则
+   - [ ] 组件
+   - [ ] 物理层次结构
+   - [ ] 层次化
+   - [ ] 绝缘
+   - [ ] 包
+   - [ ] 构建一个组件
+   - [ ] 设计一个函数
+   - [ ] 实现一个对象
+   - [ ] 附录
+   :LOGBOOK:
+   CLOCK: [2017-05-05 周五 23:02]--[2017-05-05 周五 23:17] =>  0:15
+   CLOCK: [2017-05-05 周五 18:30]--[2017-05-05 周五 19:33] =>  1:03
+   :END:
+** TODO [#A] 网络游戏核心技术与实战[0%]
+   - [ ] 快速入门
+   - [ ] 历史和演化
+   - [ ] 何为网络游戏
+   - [ ] 网络游戏架构
+   - [ ] C/S MMO 游戏开发
+   - [ ] P2P MO 开发
+   - [ ] 网络游戏的辅助系统
+   - [ ] 支持网络游戏运营的基础设施
+   - [ ] 网络游戏的开发体制
+   :LOGBOOK:
+   CLOCK: [2017-05-08 周一 11:27]--[2017-05-08 周一 11:48] =>  0:21
+   CLOCK: [2017-05-08 周一 08:56]--[2017-05-08 周一 09:19] =>  0:23
    :END:
 * Homework
 * Things
