--- a/tasks.org
+++ b/tasks.org
@@ -719,11 +719,11 @@
    CLOCK: [2017-03-11 周六 14:34]--[2017-03-11 周六 15:10] =>  0:36
    CLOCK: [2017-03-11 周六 12:45]--[2017-03-11 周六 13:10] =>  0:25
    :END:
-** TODO [#A] Unix Network Programming[9%]
+** TODO [#A] Unix Network Programming[12%]5
    - [X] Introdxuction
    - [X] TCP UDP SCTP
    - [X] Sockets Introduction
-   - [ ] Elementary TCP Sockets
+   - [X] Elementary TCP Sockets
    - [ ] TCP Client/Server Example
    - [ ] I/O Multiplexing: select and poll
    - [ ] Socket Options
@@ -753,6 +753,13 @@
    - [ ] STREAMS
    - [ ] Appendix
    :LOGBOOK:
+   CLOCK: [2017-05-09 Tue 19:54]--[2017-05-09 Tue 20:12] =>  0:18
+   CLOCK: [2017-05-09 Tue 19:04]--[2017-05-09 Tue 19:18] =>  0:14
+   CLOCK: [2017-05-09 Tue 18:32]--[2017-05-09 Tue 18:59] =>  0:27
+   CLOCK: [2017-05-09 Tue 15:58]--[2017-05-09 Tue 16:23] =>  0:25
+   CLOCK: [2017-05-09 Tue 11:25]--[2017-05-09 Tue 11:43] =>  0:18
+   CLOCK: [2017-05-09 Tue 10:51]--[2017-05-09 Tue 11:19] =>  0:28
+   CLOCK: [2017-05-08 Mon 20:50]--[2017-05-08 Mon 21:50] =>  1:00
    CLOCK: [2017-03-23 Thu 00:35]--[2017-03-23 Thu 00:48] =>  0:13
    CLOCK: [2017-03-22 Wed 17:33]--[2017-03-22 Wed 18:07] =>  0:34
    CLOCK: [2017-03-22 Wed 16:51]--[2017-03-22 Wed 17:28] =>  0:37
@@ -929,9 +936,9 @@
    CLOCK: [2017-05-05 周五 23:02]--[2017-05-05 周五 23:17] =>  0:15
    CLOCK: [2017-05-05 周五 18:30]--[2017-05-05 周五 19:33] =>  1:03
    :END:
-** TODO [#A] 网络游戏核心技术与实战[0%]
-   - [ ] 快速入门
-   - [ ] 历史和演化
+** TODO [#A] 网络游戏核心技术与实战[22%]3
+   - [X] 快速入门
+   - [X] 历史和演化
    - [ ] 何为网络游戏
    - [ ] 网络游戏架构
    - [ ] C/S MMO 游戏开发
@@ -940,6 +947,9 @@
    - [ ] 支持网络游戏运营的基础设施
    - [ ] 网络游戏的开发体制
    :LOGBOOK:
+   CLOCK: [2017-05-09 Tue 20:13]--[2017-05-09 Tue 20:28] =>  0:15
+   CLOCK: [2017-05-08 Mon 15:30]--[2017-05-08 Mon 16:20] =>  0:50
+   CLOCK: [2017-05-08 Mon 13:58]--[2017-05-08 Mon 14:23] =>  0:25
    CLOCK: [2017-05-08 周一 11:27]--[2017-05-08 周一 11:48] =>  0:21
    CLOCK: [2017-05-08 周一 08:56]--[2017-05-08 周一 09:19] =>  0:23
    :END:
