--- a/tasks.org
+++ b/tasks.org
@@ -615,11 +615,11 @@
    :LOGBOOK:
    CLOCK: [2017-02-25 周六 16:27]--[2017-02-25 周六 16:54] =>  0:27
    :END:
-** TODO [#A] 第一行代码[13%]3.6
+** TODO [#A] 第一行代码[26%]3.6
    - [X] 开始启程
    - [X] 探究活动
-   - [ ] UI 开发
-   - [ ] 探究碎片
+   - [X] UI 开发
+   - [X] 探究碎片
    - [ ] 广播机制
    - [ ] 持久化技术
    - [ ] 内容提供器
@@ -632,6 +632,15 @@
    - [ ] 开发酷欧天气
    - [ ] 最后一步--将应用发布到 360 应用商店
    :LOGBOOK:
+   CLOCK: [2017-05-13 周六 18:51]--[2017-05-13 周六 19:41] =>  0:50
+   CLOCK: [2017-05-12 周五 10:50]--[2017-05-12 周五 11:19] =>  0:29
+   CLOCK: [2017-05-12 周五 09:00]--[2017-05-12 周五 09:37] =>  0:37
+   CLOCK: [2017-05-11 周四 20:34]--[2017-05-11 周四 21:07] =>  0:33
+   CLOCK: [2017-05-11 周四 17:15]--[2017-05-11 周四 18:00] =>  0:45
+   CLOCK: [2017-05-11 周四 16:36]--[2017-05-11 周四 17:12] =>  0:36
+   CLOCK: [2017-05-11 周四 16:02]--[2017-05-11 周四 16:05] =>  0:03
+   CLOCK: [2017-05-10 周三 15:00]--[2017-05-10 周三 15:31] =>  0:31
+   CLOCK: [2017-05-10 周三 11:11]--[2017-05-10 周三 12:05] =>  0:54
    CLOCK: [2017-05-07 周日 20:41]--[2017-05-07 周日 21:34] =>  0:53
    CLOCK: [2017-05-07 周日 17:57]--[2017-05-07 周日 18:26] =>  0:29
    CLOCK: [2017-05-07 周日 17:14]--[2017-05-07 周日 17:44] =>  0:30
@@ -904,10 +913,10 @@
    CLOCK: [2017-04-28 Fri 12:13]--[2017-04-28 Fri 12:24] =>  0:11
    CLOCK: [2017-04-27 Thu 22:46]--[2017-04-27 Thu 23:20] =>  0:34
    :END:
-** TODO [#A] C++ Network Programming v1[0%]
-   - [ ] Zero
-   - [ ] Message Design Place
-   - [ ] Socket API
+** TODO [#A] C++ Network Programming v1[27%]
+   - [X] Zero
+   - [X] Message Design Place
+   - [X] Socket API
    - [ ] ACE Socket wrapper
    - [ ] Network Log
    - [ ] Concurry Design Place
@@ -917,6 +926,9 @@
    - [ ] ACE thread
    - [ ] ACE asyn
    :LOGBOOK:
+   CLOCK: [2017-05-13 周六 22:49]--[2017-05-13 周六 23:21] =>  0:32
+   CLOCK: [2017-05-12 周五 17:15]--[2017-05-12 周五 17:45] =>  0:30
+   CLOCK: [2017-05-12 周五 16:33]--[2017-05-12 周五 17:07] =>  0:34
    CLOCK: [2017-04-28 Fri 13:45]--[2017-04-28 Fri 13:58] =>  0:13
    :END:
 ** TODO [#A] 大规模 C++ 程序设计[8%]
@@ -952,6 +964,20 @@
    CLOCK: [2017-05-08 Mon 13:58]--[2017-05-08 Mon 14:23] =>  0:25
    CLOCK: [2017-05-08 周一 11:27]--[2017-05-08 周一 11:48] =>  0:21
    CLOCK: [2017-05-08 周一 08:56]--[2017-05-08 周一 09:19] =>  0:23
+   :END:
+** TODO [#A] STL 扩展技术手册[66%]
+   - [X] 标准模板库
+   - [X] 扩展 STL
+   - [ ] 元素引用类别
+   :LOGBOOK:
+   CLOCK: [2017-05-14 周日 17:09]--[2017-05-14 周日 18:01] =>  0:52
+   CLOCK: [2017-05-13 周六 23:37]--[2017-05-14 周日 00：17]  =>  0:23
+   :END:
+** TODO [#A] Imperfect c++
+   - [ ] 强制设计，约束，契约和断言
+   - [ ] 
+   :LOGBOOK:
+   CLOCK: [2017-05-14 周日 21:26]--[2017-05-14 周日 22:12] =>  0:46
    :END:
 * Homework
 * Things
