--- a/tasks.org
+++ b/tasks.org
@@ -615,7 +615,7 @@
    :LOGBOOK:
    CLOCK: [2017-02-25 周六 16:27]--[2017-02-25 周六 16:54] =>  0:27
    :END:
-** TODO [#A] 第一行代码[26%]3.6
+** TODO [#A] 第一行代码[33%]499 5.2.2
    - [X] 开始启程
    - [X] 探究活动
    - [X] UI 开发
@@ -629,9 +629,21 @@
    - [ ] 基于位置的服务
    - [ ] Matrial Design
    - [ ] 继续进阶
-   - [ ] 开发酷欧天气
+   - [X] 开发酷欧天气
    - [ ] 最后一步--将应用发布到 360 应用商店
    :LOGBOOK:
+   CLOCK: [2017-05-24 周三 14:20]--[2017-05-24 周三 14:42] =>  0:22
+   CLOCK: [2017-05-22 周一 16:54]--[2017-05-22 周一 17:11] =>  0:17
+   CLOCK: [2017-05-18 周四 22:37]--[2017-05-18 周四 23:14] =>  0:37
+   CLOCK: [2017-05-18 周四 21:42]--[2017-05-18 周四 21:53] =>  0:11
+   CLOCK: [2017-05-18 周四 18:25]--[2017-05-18 周四 19:06] =>  0:41
+   CLOCK: [2017-05-18 周四 17:26]--[2017-05-18 周四 18:06] =>  0:40
+   CLOCK: [2017-05-17 周三 21:13]--[2017-05-17 周三 23:07] =>  1:54
+   CLOCK: [2017-05-17 周三 19:44]--[2017-05-17 周三 19:55] =>  0:11
+   CLOCK: [2017-05-16 周二 15:45]--[2017-05-16 周二 16:02] =>  0:17
+   CLOCK: [2017-05-16 周二 15:38]--[2017-05-16 周二 15:45] =>  0:07
+   CLOCK: [2017-05-15 周一 20:32]--[2017-05-15 周一 21:18] =>  0:46
+   CLOCK: [2017-05-15 周一 16:26]--[2017-05-15 周一 16:50] =>  0:24
    CLOCK: [2017-05-13 周六 18:51]--[2017-05-13 周六 19:41] =>  0:50
    CLOCK: [2017-05-12 周五 10:50]--[2017-05-12 周五 11:19] =>  0:29
    CLOCK: [2017-05-12 周五 09:00]--[2017-05-12 周五 09:37] =>  0:37
@@ -684,8 +696,8 @@
    CLOCK: [2017-03-09 周四 17:09]--[2017-03-09 周四 17:50] =>  0:41
    CLOCK: [2017-03-08 周三 23:33]--[2017-03-08 周三 23:40] =>  0:07
    :END:
-** TODO [#A] Linux 多线程服务端编程[18%]
-   - [ ] 线程安全的对象生命期管理
+** TODO [#A] Linux 多线程服务端编程[25%]44
+   - [X] 线程安全的对象生命期管理
    - [ ] 线程同步精要
    - [ ] 多线程服务器的适用场合与常用编程模型
    - [ ] C++多线程系统编程精要
@@ -702,6 +714,11 @@
    - [X] 关于 boost
    - [ ] 关于 TCP 并发连接的几个思考题与实验
    :LOGBOOK:
+   CLOCK: [2017-05-18 周四 16:26]--[2017-05-18 周四 17:01] =>  0:35
+   CLOCK: [2017-05-18 周四 14:27]--[2017-05-18 周四 14:48] =>  0:21
+   CLOCK: [2017-05-18 周四 08:31]--[2017-05-18 周四 09:33] =>  1:02
+   CLOCK: [2017-05-18 周四 07:51]--[2017-05-18 周四 08:16] =>  0:25
+   CLOCK: [2017-05-18 周四 07:08]--[2017-05-18 周四 07:31] =>  0:23
    CLOCK: [2017-04-17 Mon 15:50]--[2017-04-17 Mon 16:17] =>  0:27
    CLOCK: [2017-03-10 周五 20:39]--[2017-03-10 周五 21:35] =>  0:56
    :END:
@@ -959,6 +976,7 @@
    - [ ] 支持网络游戏运营的基础设施
    - [ ] 网络游戏的开发体制
    :LOGBOOK:
+   CLOCK: [2017-05-15 周一 22:42]--[2017-05-15 周一 22:49] =>  0:07
    CLOCK: [2017-05-09 Tue 20:13]--[2017-05-09 Tue 20:28] =>  0:15
    CLOCK: [2017-05-08 Mon 15:30]--[2017-05-08 Mon 16:20] =>  0:50
    CLOCK: [2017-05-08 Mon 13:58]--[2017-05-08 Mon 14:23] =>  0:25
@@ -978,6 +996,20 @@
    - [ ] 
    :LOGBOOK:
    CLOCK: [2017-05-14 周日 21:26]--[2017-05-14 周日 22:12] =>  0:46
+   :END:
+** TODO [#B] 日本蜡烛图技术[33%]
+   - [X] 引论
+   - [X] 历史背景
+   - [X] 绘制蜡烛图的方法
+   - [ ] 反转形态
+   - [ ] 星线
+   - [ ] 其他反转形态
+   - [ ] 持续形态
+   - [ ] 神器的十字星
+   - [ ] 蜡烛图技术汇总 FDA
+   :LOGBOOK:
+   CLOCK: [2017-06-06 周二 21:46]--[2017-06-06 周二 22:28] =>  0:42
+   CLOCK: [2017-06-06 周二 16:49]--[2017-06-06 周二 17:39] =>  0:50
    :END:
 * Homework
 * Things
