--- a/tasks.org
+++ b/tasks.org
@@ -992,7 +992,7 @@
    CLOCK: [2017-05-14 周日 17:09]--[2017-05-14 周日 18:01] =>  0:52
    CLOCK: [2017-05-13 周六 23:37]--[2017-05-14 周日 00：17]  =>  0:23
    :END:
-** TODO [#A] Imperfect c++
+** TODO [#A] Imperfect c++[%]
    - [ ] 强制设计，约束，契约和断言
    - [ ] 
    :LOGBOOK:
@@ -1011,6 +1011,16 @@
    :LOGBOOK:
    CLOCK: [2017-06-06 周二 21:46]--[2017-06-06 周二 22:28] =>  0:42
    CLOCK: [2017-06-06 周二 16:49]--[2017-06-06 周二 17:39] =>  0:50
+   :END:
+** TODO [#B] Redis 设计与实现[75%]
+   - [X] 引言
+   - [X] 简单动态字符串
+   - [X] 链表
+   - [ ] 字典
+   :LOGBOOK:
+   CLOCK: [2017-07-24 周一 20:40]--[2017-07-24 周一 20:56] =>  0:16
+   CLOCK: [2017-07-21 周五 16:52]--[2017-07-21 周五 17:14] =>  0:22
+   CLOCK: [2017-07-21 周五 15:00]--[2017-07-21 周五 15:42] =>  0:42
    :END:
 * Homework
 * Things
