--- a/tasks.org
+++ b/tasks.org
@@ -1018,6 +1018,7 @@
    - [X] 链表
    - [ ] 字典
    :LOGBOOK:
+   CLOCK: [2017-07-25 Tue 08:58]--[2017-07-25 Tue 09:31] =>  0:33
    CLOCK: [2017-07-24 周一 20:40]--[2017-07-24 周一 20:56] =>  0:16
    CLOCK: [2017-07-21 周五 16:52]--[2017-07-21 周五 17:14] =>  0:22
    CLOCK: [2017-07-21 周五 15:00]--[2017-07-21 周五 15:42] =>  0:42
